# vasp_tools

./: .gitignore  CMakeLists.txt  README.md  SysMaterial.material  clean.sh  client.cpp  compile.sh  compile.txt  getDensity.py  main.cpp  remote_client.h  remote_server.cpp  remote_server.h  server.cpp  tool.h  vasp.cpp  vasp.h  vaspkit.h
client/: fdtd.py  remote_client.h  vasp.py  vasp_api.py  vasp_lumapi.py  vasp_script.py
config/: VPKIT.in  mesh.conf  thermalExpansion.INCAR
include/: remote_server.h  tool.h  vasp.h  vasp_tool.h  vaspkit.h
scripts/: compile.sh  computeSpecifiedHeat.py  computeThermalExpansion.py  getBandgap.py  getDensity.py  readbandgap.sh  redo.sh  thermalExpansionAnalysis.sh
src/: remote_server.cpp  tool.cpp  vasp.cpp  vasp_tool.cpp  vasptool.cpp
